added lodging static page and updated the nav links

--- a/index.erb
+++ b/index.erb
@@ -1,11 +1,11 @@
 <html>
 	<head>
-		<title>Vacation App</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Vacation App</title>
 	</head>
 	<body>
 		<div id="navbar">
-			<a href="#">Home</a> | <a href="#">Budget</a> | <a href="#">To Do</a> | <a href="#">Amenities</a> | <a href="#">Transportation</a> | <a href="#">Lodging</a>
+			<a href="#">Home</a> | <a href="#">Budget</a> | <a href="#">To Do</a> | <a href="#">Amenities</a> | <a href="transportation.erb">Transportation</a> | <a href="lodging.erb">Lodging</a>
 		</div>
 		<h1>We are here to help you plan your next vacation</h1>
 
