links put into an unordered list

--- a/lodging.erb
+++ b/lodging.erb
@@ -11,25 +11,30 @@
 
 		<div class="lodging" id="hotel">
 			<h2>Hotel Choices</h2>
-			<a href="http://www.orbitz.com">Orbitz</a>
-			<a href="http://www.expedia.com">Expedia</a>
-			<a href="http://www.hotwire.com">Hotwire</a>
-			<a href="http://www.hotels.com">Hotels.com</a>
-			<a href="http://www.tripadvisor.com">Tripadvisor.com</a>
+			<ul>
+				<li><a href="http://www.orbitz.com">Orbitz</a></li>
+				<li><a href="http://www.expedia.com">Expedia</a></li>
+				<li><a href="http://www.hotwire.com">Hotwire</a></li>
+				<li><a href="http://www.hotels.com">Hotels.com</a></li>
+				<li><a href="http://www.tripadvisor.com">Tripadvisor.com</a></li>
+			</ul>
 		</div>
 
 		<div class="lodging" id="rentals">
 			<h2>Short Term Rentals</h2>	
-			<a href="https://www.airbnb.com/">Airbnb</a>
-			<a href="http://www.flipkey.com/">Flipkey</a>
-			<a href="http://www.homeaway.com/">HomeAway</a>
-
+			<ul>
+				<li><a href="https://www.airbnb.com/">Airbnb</a></li>
+				<li><a href="http://www.flipkey.com/">Flipkey</a></li>
+				<li><a href="http://www.homeaway.com/">HomeAway</a></li>
+			</ul>
 		</div>
 
 		<div class="lodging" id="local">
 			<h2>Local or Private listing</h2>
-			<a href='<%=destination%>".craigslist.org"'>Craigslist</a>
-			<a href="https://www.couchsurfing.org/">Couch Surfing</a>		
+			<ul>
+				<li><a href='<%=destination%>".craigslist.org"'>Craigslist</a></li>
+				<li><a href="https://www.couchsurfing.org/">Couch Surfing</a></li>
+			</ul>
 		</div>
 
 
