--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="public/style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
 		<title>Vacation App</title>
 	</head>
@@ -14,8 +14,8 @@
 
 		<!-- Form for the destination and other trip info -->
 		<div class="pure-g">
-			<form action="/" method="post" class="pure-u-1-2">
-				<fieldset class="theform">
+			<form action="/" method="post" class="pure-u-1-3">
+				<fieldset>
 				<legend>Trip Info</legend>
 					<label>Origin</label><input type="text" name="origin">
 					<label>Destination</label><input type="text" name="destination">
@@ -26,13 +26,14 @@
 						<option value="car">Car</option>
 						<option value="cruise">Cruise</option>
 						<option value="Bus">Bus</option>
-					</select><br>
+					</select>
 					<label>How much can you spend on this vacation?</label><input type="number" name="budget" required>
-					<input type="submit" value="Submit" action="button" id="btn">
+					<input type="submit" value="Submit" action="button">
 				</fieldset>
 			</form>
 		</div>
-		<div class="pure-u-1-2"></div>
+		<div class="pure-u-1-3"></div>
+		<div class="pure-u-1-3"></div>
 	</body>
 
 
