--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
 
 		<!-- Form for the destination and other trip info -->
 		<div class="pure-g">
-			<form action="/" method="post" class="pure-u-1-2">
+			<form action="/budget" method="post" class="pure-u-1-2">
 				<fieldset class="theform">
 				<legend>Trip Info</legend>
 					<label>Origin</label><input type="text" name="origin">
