fixing bugs in budget calculator

--- a/views/budget.erb
+++ b/views/budget.erb
@@ -19,7 +19,7 @@
 			 	<label>Amenities</label><input type="number" name="amenities" value="0">
 			 	<label>Dining</label><input type="number" name="dining" value="0">
 			 	<label>Other costs (insurance, visa, vaccines, etc)</label><input type="number" name="other" value="0">
-			 	<input type="submit" value="Submit" action="button" id="btn">
+			 	<input type="submit" value="Submit" action="calc_budget" id="btn">
 			 </form>
 		</div>
 		<div><%= total_box %></div>
