--- a/views/budget.erb
+++ b/views/budget.erb
@@ -19,10 +19,11 @@
 			 	<label>Amenities</label><input type="number" name="amenities" value="0">
 			 	<label>Dining</label><input type="number" name="dining" value="0">
 			 	<label>Other costs (insurance, visa, vaccines, etc)</label><input type="number" name="other" value="0">
-			 	<input type="submit" value="Submit" action="calc_budget" id="btn">
+			 	<input type="submit" name="action" value="Calculate" id="btn">
 			 </form>
 		</div>
 		<div><%= total_box %></div>
+		<div><%= total_box_update %></div>
 	</body>
 
 
