--- a/views/transportation.erb
+++ b/views/transportation.erb
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div id="navbar">
-			<a href="/">Home</a> | <a href="budget">Budget</a> | <a href="#">To Do</a> | <a href="#">Amenities</a> | <a href="transportation">Transportation</a> | <a href="lodging">Lodging</a>
+			<a href="/">Home</a> || <a href="budget">Budget</a> || <a href="#">To Do</a> || <a href="#">Amenities</a> || <a href="transportation">Transportation</a> || <a href="lodging">Lodging</a>
 		</div>
 		<h1>We are here to help you plan your next vacation</h1>
 
