--- a/public/style.css
+++ b/public/style.css
@@ -1,26 +1,50 @@
 body{
-background-color: grey;
+	background-color: tomato;
 }
 h1{
 	color: white;
 }
-.theform label{
+#navbar{
+	color: white;
+	font-size: 24px;
+	padding: 10px;
+	margin-top: 5px;
+	display: inline-block;
+
+}
+a{
+	color: white;
+	font-size: 24px;
+	text-decoration: none;
+}
+a:visited{
+	color: white;
+}
+fieldset{
+	width: 500px;
+	border:8px white solid;
+}
+label,
+legend{
 	font-size: 24px;
 	color:white;
 }
-.theform input,
-.theform label,
-.theform select{
+input,
+label,
+select{
 	margin: 10px;
 	display: block;
 }
-.theform input {
+input {
 	width: 200px;
 	height: 30px;
 }
+.last{
+	margin-bottom: 30px;
+}
 #btn{
-	width: 100px;
-	height: 35px;
+	width: 150px;
+	height: 50px;
 	border-radius: 5px;
 }
 
