--- a/views/budget.erb
+++ b/views/budget.erb
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="navbar">
-			<a href="/">Home</a> | <a href="budget">Budget</a> | <a href="#">To Do</a> | <a href="#">Amenities</a> | <a href="transportation">Transportation</a> | <a href="lodging.erb">Lodging</a>
+			<a href="/">Home</a> || <a href="budget">Budget</a> || <a href="#">To Do</a> || <a href="#">Amenities</a> || <a href="transportation">Transportation</a> || <a href="lodging.erb">Lodging</a>
 		</div>
 		<h1>We are here to help you plan your next vacation</h1>
 		<div>
@@ -18,7 +18,7 @@
 			 	<label>Lodging</label><input type="number" name="lodging" value="0">
 			 	<label>Amenities</label><input type="number" name="amenities" value="0">
 			 	<label>Dining</label><input type="number" name="dining" value="0">
-			 	<label>Other costs (insurance, visa, vaccines, etc)</label><input type="number" name="other" value="0">
+			 	<label>Other costs (insurance, visa, vaccines, etc)</label><input class="last" type="number" name="other" value="0">
 			 	<input type="submit" name="action" value="Calculate" id="btn">
 			 </form>
 		</div>
