--- a/views/bills.erb
+++ b/views/bills.erb
@@ -11,27 +11,27 @@
 			 	<label> Total Budget </label> <input type="number" name="totalbudget" value=<%= session[:user_budget] %>>
 
 			 	<label>Transportation</label><input type="number" name="transportation_bill" value=<%= session[:transportation] %>>
-				 	<label>Split by how many? </label> <input type="text" name="transportation_user1">
+				 	<label>Split by how many? </label> <input type="number" name="transportation_user1">
 
 				 	<!-- <label> Who paid for it? </label> <input type="text" name="transportation_user2"> -->
 
 			 	<label>Lodging</label><input type="number" name="lodging_bill" value=<%= session[:lodging] %>>
-				 	<label>Split by how many?</label> <input type="text" name="lodging_user1">
+				 	<label>Split by how many?</label> <input type="number" name="lodging_user1">
 
 				 	<!-- <label> Who paid for it? </label> <input type="text" name="lodging_user2"> -->
 
 			 	<label>Amenities</label><input type="number" name="amenities_bill" value=<%= session[:amenities] %>>
-				 	<label>Split by how many?</label> <input type="text" name="amenities_user1">
+				 	<label>Split by how many?</label> <input type="number" name="amenities_user1">
 
 				 	<!-- <label> Who paid for it? </label> <input type="text" name="amenities_user2"> -->
 
 			 	<label>Dining</label><input type="number" name="dining_bill" value=<%= session[:dining] %>>
-				 	<label>Split by how many?</label> <input type="text" name="dining_user1">
+				 	<label>Split by how many?</label> <input type="number" name="dining_user1">
 
 				 	<!-- <label> Who paid for it? </label> <input type="text" name="dining_user2"> -->
 
 			 	<label>Other costs (insurance, visa, vaccines, etc)</label><input type="number" name="other_bill" value=<%= session[:other] %>>
-				 	<label>Split by how many?</label> <input type="text" name="other_user1">
+				 	<label>Split by how many?</label> <input type="number" name="other_user1">
 
 				 	<!-- <label> Who paid for it? </label> <input type="text" name="other_user2"> -->
 
