Have print page with destination and transport type

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,12 +19,12 @@
 				<legend>Trip Info</legend>
 					<label>Origin</label><input type="text" name="origin">
 					<label>Destination</label><input type="text" name="destination">
-					<label>Transportation</label><select name="transportation">
+					<label>Transportation</label><select name="transportation_type">
 						<option value="-" selected>-</option>
-						<option value="flight">Flight</option>
-						<option value="train">Train</option>
-						<option value="car">Car</option>
-						<option value="cruise">Cruise</option>
+						<option value="Flight">Flight</option>
+						<option value="Train">Train</option>
+						<option value="Car">Car</option>
+						<option value="Cruise">Cruise</option>
 						<option value="Bus">Bus</option>
 					</select><br>
 					<label>How much can you spend on this vacation?</label><input type="number" name="budget" required>
