--- a/views/print.erb
+++ b/views/print.erb
@@ -11,7 +11,8 @@
 		</div>
 		<h1>My Itinerary and Checklist</h1>
 
-
+		<p>My trip to: <span><%= session[:destination] %></span></p>
+		<p>I am getting there by: <span><%= session[:transportation_type] %></span></p>
 
 	</body>
 
