--- a/views/checklist.erb
+++ b/views/checklist.erb
@@ -13,12 +13,12 @@
 		<h1>We are here to help you plan your next vacation</h1>
 
 		<!-- Form for the destination and other trip info -->
-		<div>
+	<!-- 	<div>
 			<form action="/" method="post">
 					<label>Name</label><input type="text" name="name">
 					<input type="submit" value="Submit" action="button" id="btn">
 			</form>
-		</div>
+		</div> -->
 			
 
 
