--- a/views/bills.erb
+++ b/views/bills.erb
@@ -1,11 +1,30 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Split your bills</title>
-</head>
-	
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="style_index.css">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css"> 
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/base-min.css">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/forms-min.css">
+		<title>Split your bills</title>
+	</head>
 	<body>
+
+	<div class="navbar">
+    	<div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
+        	<ul>
+            	<li class="pure-menu-selected"><a href="/">Home</a></li>
+            	<li><a href="checklist">To Do</a></li>
+            	<li><a href="budget">Budget</a></li>
+            	<li><a href="bills">Splitting Bills</a></li>
+            	<li><a href="transportation">Transportation</a></li>
+            	<li><a href="lodging">Lodging</a></li>
+            	<li><a href="print">Print-out Page</a></li>
+        	</ul>
+    	</div>
+	</div>
+
+	  <h1>We are here to help you split your bills</h1>
 		<div>
 			 	<label> Total Budget </label> <input type="number" name="totalbudget" value=<%= session[:user_budget] %>>
 			 	<br>
