--- a/views/index.erb
+++ b/views/index.erb
@@ -36,29 +36,35 @@
 				 <div class="pure-g-r">
 
 				 <div class="pure-u-1-1">
-				 <i class="fa fa-home"></i>
+				 	<!-- <span class="fa fa-home"></span> -->
 					<label>Origin</label><input type="text" name="origin">
+					<i class="fa fa-shopping-cart fa-lg"></i>
 				 </div>
 
 				 <div class="pure-u-1-1">
+				 	<!-- <span class="fa fa-camera-retro"></span> -->
 					<label>Destination</label><input type="text" name="destination">
+					<i class="fa fa-shopping-cart fa-lg"></i>
 				 </div>
 
 				 <div class="pure-u-1-1">
-				 <i class="fa fa-paper-plane-o"></i>
+				 	<!-- <span class="fa fa-paper-plane-o"></span> -->
 					<label>Transportation</label><select name="transportation_type">
-						<option value="-" selected>-</option>
+						<option value="-" selected>-</option> <i class="fa fa-shopping-cart fa-lg"></i>
 						<option value="Flight">Flight</option>
 						<option value="Train">Train</option>
 						<option value="Car">Car</option>
 						<option value="Cruise">Cruise</option>
 						<option value="Bus">Bus</option>
 					</select>
+					<i class="fa fa-shopping-cart fa-lg"></i>
 				 </div>
 
 				 <div class="pure-u-1-1">
+				 <!--    <span class="icon-money"></span> -->
 					<label>How much can you spend on this vacation?</label><input type="number" name="budget" required>
-					<input type="submit" value="Submit" action="button" id="btn">
+					<input class="pure-button pure-button-primary" type="submit" value="Submit" action="button">
+					<i class="fa fa-shopping-cart fa-lg"></i>
 				 </div>
 
 				 </div>
