--- a/views/lodging.erb
+++ b/views/lodging.erb
@@ -1,14 +1,29 @@
 <html>
 	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css"> 
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/base-min.css">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/forms-min.css">
 		<title>Lodging</title>
 	</head>
-
 	<body>
-		<div id="navbar">
-			<a href="/">Home</a> | <a href="budget">Budget</a> | <a href="checklist">To Do</a> | <a href="amenities">Amenities</a> | <a href="transportation">Transportation</a> | <a href="lodging">Lodging</a> | <a href="print">Print-out Page</a>
-		</div>
 
+	<div class="navbar">
+    	<div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
+        	<ul>
+            	<li class="pure-menu-selected"><a href="/">Home</a></li>
+            	<li><a href="checklist">To Do</a></li>
+            	<li><a href="budget">Budget</a></li>
+            	<li><a href="bills">Splitting Bills</a></li>
+            	<li><a href="transportation">Transportation</a></li>
+            	<li><a href="lodging">Lodging</a></li>
+            	<li><a href="print">Print-out Page</a></li>
+        	</ul>
+    	</div>
+	</div>
+      <h1>We are here to help you find a place to stay</h1>
 		<div class="lodging" id="hotel">
 			<h2>Hotel Choices</h2>
 			<ul>
@@ -32,7 +47,7 @@
 		<div class="lodging" id="local">
 			<h2>Local or Private listing</h2>
 			<ul>
-				<li><a href='<%=destination%>".craigslist.org"'>Craigslist</a></li>
+				<li><a href="https://www.craigslist.org">Craigslist</a></li>
 				<li><a href="https://www.couchsurfing.org/">Couch Surfing</a></li>
 			</ul>
 		</div>
