--- a/public/style_index.css
+++ b/public/style_index.css
@@ -2,10 +2,14 @@ body{
 background-color: grey;
 }
 
-
+ 
 h1{
 	padding: 25px;
 	color: white;
+}
+
+span{
+	layout:inline;
 }
 
 .theform{
@@ -14,26 +18,22 @@ h1{
 	color:white;
 }
 
+
 /*.theform label{
 	font-size: 24px;
 	color:white;
-}*/
+}
 
-/*.theform input,
+.theform input,
 .theform label,
 .theform select{
 	margin: 10px;
 	display: block;
-}*/
+}
 
-/*.theform input {
+.theform input {
 	width: 200px;
 	height: 30px;
 }*/
 
-#btn{
-	width: 100px;
-	height: 35px;
-	border-radius: 5px;
-}
 
