--- a/views/budget.erb
+++ b/views/budget.erb
@@ -25,17 +25,47 @@
 	</div>
 
 		<h1>We are here to help you plan your budget</h1>
-		<div>
-			 <form action="/budget" method="post">
+		
+		<div class="theform">
+		<div class="pure-g">
+			
+			 <form action="/budget" method="post" class="pure-form pure-form-stacked">
+			 	<fieldset>
+			 	<div class="pure-g-r">
+			 	
+			 	<div class="pure-u-1-1">
 			 	<label> Total Budget </label> <input type="number" name="totalbudget" value=<%= user_budget %> >
+			 	</div>
+
+			 	<div class="pure-u-1-1">
 			 	<label>Transportation</label><input type="number" name="transportation" value="0">
+			 	</div>
+
+			 	<div class="pure-u-1-1">
 			 	<label>Lodging</label><input type="number" name="lodging" value="0">
+			 	</div>
+
+			 	<div class="pure-u-1-1">
 			 	<label>Amenities</label><input type="number" name="amenities" value="0">
+			 	</div>
+
+			 	<div class="pure-u-1-1">
 			 	<label>Dining</label><input type="number" name="dining" value="0">
+			 	</div>
+
+			 	<div class="pure-u-1-1">
 			 	<label>Other costs (insurance, visa, vaccines, etc)</label><input type="number" name="other" value="0">
-			 	<input type="submit" name="action" value="Calculate" id="btn">
+			 	<input class="pure-button pure-button-primary" type="submit" name="action" value="Calculate" id="btn">
+			 	</div>
+			 	
+			 	</div>
+			 	</fieldset>
 			 </form>
+		
 		</div>
+		</div>
+
+
 		<div><%= total_box %></div>
 		<div><%= total_box_update %></div>
 
