some tweaks to the nav

--- a/views/bills.erb
+++ b/views/bills.erb
@@ -6,6 +6,10 @@
 </head>
 	
 	<body>
+		<div id="navbar">
+			<a href="/">Home</a> | <a href="budget">Budget</a> | <a href="bills">Bills</a> | <a href="checklist">To Do</a> | <a href="amenities">Amenities</a> | <a href="transportation">Transportation</a> | <a href="lodging">Lodging</a> | <a href="print">Print</a>
+		</div>
+	
 		<div>
 			 	<label> Total Budget </label> <input type="number" name="totalbudget" value=<%= session[:user_budget] %>>
 			 	<br>
