--- a/views/checklist.erb
+++ b/views/checklist.erb
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="navbar">
-			<a href="/">Home</a> | <a href="budget">Budget</a> | <a href="checklist">To Do</a> | <a href="amenities">Amenities</a> | <a href="transportation">Transportation</a> | <a href="lodging">Lodging</a> | <a href="print">Print-out Page</a>
+			<a href="/">Home</a> | <a href="budget">Budget</a> | <a href="bills">Bills</a> | <a href="checklist">To Do</a> | <a href="amenities">Amenities</a> | <a href="transportation">Transportation</a> | <a href="lodging">Lodging</a> | <a href="print">Print</a>
 		</div>
 		<h1>We are here to help you plan your next vacation</h1>
 
