--- a/public/style_index.css
+++ b/public/style_index.css
@@ -8,9 +8,21 @@ h1{
 	color: white;
 }
 
-span{
-	layout:inline;
+.budget{
+	text-align: center;
+	font-size: 24px;
+	background-color: beige;
+	border: 6px solid #949599;
+  	height: 50px;
+  	margin: auto;
+  	padding: 20px;
+  	width: 200px;
+
 }
+
+/*span{
+	layout:inline;
+}*/
 
 .theform{
 	padding-left: 35px;
@@ -18,6 +30,10 @@ span{
 	color:white;
 }
 
+#button_budget{
+    margin: 40px;
+
+}
 
 /*.theform label{
 	font-size: 24px;
