--- a/views/budget.erb
+++ b/views/budget.erb
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css"> 
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/base-min.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/forms-min.css">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 		<title>Budget</title>
 	</head>
 	<body>
@@ -31,31 +33,33 @@
 			
 			 <form action="/budget" method="post" class="pure-form pure-form-stacked">
 			 	<fieldset>
-			 	<div class="pure-g-r">
+			 	<div class="pure-g">
 			 	
 			 	<div class="pure-u-1-1">
 			 	<label> Total Budget </label> <input type="number" name="totalbudget" value=<%= user_budget %> >
 			 	</div>
 
-			 	<div class="pure-u-1-1">
-			 	<label>Transportation</label><input type="number" name="transportation" value="0">
+			 	<div class="pure-u-1 pure-u-md-1-3">
+			 	<label>Transportation</label><input type="number" name="transportation">
 			 	</div>
 
-			 	<div class="pure-u-1-1">
-			 	<label>Lodging</label><input type="number" name="lodging" value="0">
+			 	<div class="pure-u-1 pure-u-md-1-3">
+			 	<label>Lodging</label><input type="number" name="lodging">
 			 	</div>
 
-			 	<div class="pure-u-1-1">
-			 	<label>Amenities</label><input type="number" name="amenities" value="0">
+			 	<div class="pure-u-1 pure-u-md-1-3">
+			 	<label>Amenities</label><input type="number" name="amenities">
 			 	</div>
 
-			 	<div class="pure-u-1-1">
-			 	<label>Dining</label><input type="number" name="dining" value="0">
+			 	<div class="pure-u-1 pure-u-md-1-3">
+			 	<label>Dining</label><input type="number" name="dining">
 			 	</div>
 
-			 	<div class="pure-u-1-1">
-			 	<label>Other costs (insurance, visa, vaccines, etc)</label><input type="number" name="other" value="0">
-			 	<input class="pure-button pure-button-primary" type="submit" name="action" value="Calculate" id="btn">
+			 	<div class="pure-u-1 pure-u-md-1-3">
+			 	<label>Other costs</label><input type="number" name="other">
+			 	</div>
+			 	<div class="pure-u-1 pure-u-md-1-3">
+			 	<input id="button_budget" class="pure-button pure-button-primary" type="submit" name="action" value="Calculate">
 			 	</div>
 			 	
 			 	</div>
@@ -66,9 +70,11 @@
 		</div>
 
 
-		<div><%= total_box %></div>
-		<div><%= total_box_update %></div>
-
+	<!-- 	<div><%= total_box %></div> -->
+		<div class="budget">
+		<i class="fa fa-money"> </i> Money left <br>
+		 <%= total_box_update %>
+		</div>
 	</body>
 
 
