--- a/views/index.erb
+++ b/views/index.erb
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/base-min.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/forms-min.css">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
 		<title>Vacation App</title>
 	</head>
 	<body>
@@ -50,7 +51,7 @@
 				 <div class="pure-u-1-1">
 				 	<!-- <span class="fa fa-paper-plane-o"></span> -->
 					<label>Transportation</label><select name="transportation_type">
-						<option value="-" selected>-</option> <i class="fa fa-shopping-cart fa-lg"></i>
+						<option value="-" selected>-</option>
 						<option value="Flight">Flight</option>
 						<option value="Train">Train</option>
 						<option value="Car">Car</option>
