Added background pattern to style_index

--- a/views/checklist.erb
+++ b/views/checklist.erb
@@ -28,7 +28,7 @@
 	<br>
 			<ul>
 				<% array_todo.each do |item| %>
-					<li><%= item %></li>
+					<i class="fa fa-square-o"></i><li><%= item %></li>
 				<% end %>
 				<% user_todo.each do |user_item| %>
 					<li><%= user_item %></li>
