--- a/public/style_index.css
+++ b/public/style_index.css
@@ -2,7 +2,7 @@ body{
 background-color: grey;
 }
 
- 
+
 h1{
 	padding: 25px;
 	color: white;
@@ -20,9 +20,9 @@ h1{
 
 }
 
-/*span{
-	layout:inline;
-}*/
+.bill_split{
+	font-size: 24px;
+}
 
 .theform{
 	padding-left: 35px;
@@ -35,21 +35,23 @@ h1{
 
 }
 
-/*.theform label{
-	font-size: 24px;
+label{
+	padding: 4px;
+}
+
+.theform_split{
+	padding-top: 5px;
+	padding-left: 30px;
+	font-size: 18px;
 	color:white;
 }
 
-.theform input,
-.theform label,
-.theform select{
-	margin: 10px;
-	display: block;
+.button-secondary {
+    color: white;
+    border-radius: 2px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-.theform input {
-	width: 200px;
-	height: 30px;
-}*/
+
 
 
