--- a/views/budget.erb
+++ b/views/budget.erb
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/base-min.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/forms-min.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
-		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
 		<title>Budget</title>
 	</head>
 	<body>
@@ -59,13 +59,17 @@
 			 	<label>Other costs</label><input type="number" name="other">
 			 	</div>
 			 	<div class="pure-u-1 pure-u-md-1-3">
-			 	<input id="button_budget" class="pure-button pure-button-primary" type="submit" name="action" value="Calculate">
+			 	<!-- <input id="button_budget" class="pure-button pure-button-primary" type="submit" name="action" value="Calculate"> -->
+			 		<button id="button_budget" class="pure-button pure-button-primary">
+					Calculate
+					<i class="fa fa-gears"></i>
+					</button>
 			 	</div>
-			 	
+
 			 	</div>
 			 	</fieldset>
 			 </form>
-		
+
 		</div>
 		</div>
 
@@ -75,7 +79,6 @@
 		<i class="fa fa-money"> </i> Money left <br>
 		 <%= total_box_update %>
 		</div>
+
 	</body>
-
-
 </html>
