--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/forms-min.css">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
 		<title>Vacation App</title>
 	</head>
 	<body>
@@ -37,20 +38,17 @@
 				 <div class="pure-g-r">
 
 				 <div class="pure-u-1-1">
-				 	<!-- <span class="fa fa-home"></span> -->
-					<label>Origin</label><input type="text" name="origin">
-					<i class="fa fa-shopping-cart fa-lg"></i>
+					<label><i class="fa fa-home fa-lg"> Origin </i> </label><input class="pure-input-rounded" type="text" name="origin">
+					<!-- <i class="fa fa-shopping-cart fa-lg"></i> -->
 				 </div>
 
 				 <div class="pure-u-1-1">
-				 	<!-- <span class="fa fa-camera-retro"></span> -->
-					<label>Destination</label><input type="text" name="destination">
-					<i class="fa fa-shopping-cart fa-lg"></i>
+					<label> <i class="fa fa-globe fa-lg"></i> Destination</label><input class="pure-input-rounded" type="text" name="destination">
 				 </div>
 
 				 <div class="pure-u-1-1">
 				 	<!-- <span class="fa fa-paper-plane-o"></span> -->
-					<label>Transportation</label><select name="transportation_type">
+					<label> <i class="fa fa-rocket fa-lg"></i>  Transportation</label><select name="transportation_type">
 						<option value="-" selected>-</option>
 						<option value="Flight">Flight</option>
 						<option value="Train">Train</option>
@@ -58,14 +56,17 @@
 						<option value="Cruise">Cruise</option>
 						<option value="Bus">Bus</option>
 					</select>
-					<i class="fa fa-shopping-cart fa-lg"></i>
 				 </div>
 
 				 <div class="pure-u-1-1">
-				 <!--    <span class="icon-money"></span> -->
-					<label>How much can you spend on this vacation?</label><input type="number" name="budget" required>
-					<input class="pure-button pure-button-primary" type="submit" value="Submit" action="button">
+					<label> <i class="fa fa-dollar fa-lg"></i> How much can you spend on this vacation?</label><input type="number" name="budget" required>
+				<!-- 	<input class="pure-button pure-button-primary" type="submit" value="Submit" action="button">
 					<i class="fa fa-shopping-cart fa-lg"></i>
+				 </div> -->
+				 	<button class="pure-button pure-button-primary">
+					Submit
+					<i class="fa fa-send-o"></i>
+					</button>
 				 </div>
 
 				 </div>
