Added links to the transportation page

--- a/views/transportation.erb
+++ b/views/transportation.erb
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css"> 
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/base-min.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/forms-min.css">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
 		<title>Transportation</title>
 	</head>
 	<body>
@@ -28,16 +29,22 @@
 		<div class="transportation" id="flights">
 				<h3> Main Airlines </h3>
 			<ul>
-      			<li><a href="www.americanairlines.com">American Airlines</a></li>
-      			<li><a href="www.deltaairlines.com">Delta Airlines</a></li>
-      			<li><a href="www.unitedairlines.com">United Airlines</a></li>
+      			<li><a href="http://www.americanairlines.com">American Airlines</a></li>
+      			<li><a href="http://www.deltaairlines.com">Delta Airlines</a></li>
+      			<li><a href="http://www.unitedairlines.com">United Airlines</a></li>
+      			<li><a href="http://www.southwest.com">Southwest Airlines</a></li>
+      			<li><a href="http://www.britishairways.com">British Airways</a></li>
+      			<li><a href="http://www.airfrance.us">Air France</a></li>
+      			<li><a href="http://www.emirates.com/us">Emirates</a></li>
+      			<li><a href="http://www.qantas.com/us">Qantas</a></li>
+      			<li><a href="http://www.lufthansa.com">Lufthansa</a></li>
    			</ul>
 		</div>
 
 		<div class="transportation" id="train">
 				<h3> Trains & Railroads </h3>
 			<ul>
-      			<li><a href="www.amtrak.com">Amtrak</a></li>
+      			<li><a href="http://www.amtrak.com">Amtrak</a></li>
       			<li><a href="#">RailEurope</a></li>
       			<li><a href="http://www.cn.ca/">Canada</a></li>
    			</ul>
@@ -46,7 +53,7 @@
 		<div class="transportation" id="cruise">
 				<h3> Cruises </h3>
 			<ul>
-      			<li><a href="www.carnival.com">Carnival</a></li>
+      			<li><a href="http://www.carnival.com">Carnival</a></li>
       			<li><a href="http://disneycruise.disney.go.com/">DisneyCruise</a></li>
       			<li><a href="http://www.americancruiselines.com/">American Cruise Lines</a></li>
    			</ul>
