--- a/views/checklist.erb
+++ b/views/checklist.erb
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css"> 
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/base-min.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/forms-min.css">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 		<title>Checklist</title>
 	</head>
