--- a/views/lodging.erb
+++ b/views/lodging.erb
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css"> 
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/base-min.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/forms-min.css">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
+		
 		<title>Lodging</title>
 	</head>
 	<body>
