--- a/views/transportation.erb
+++ b/views/transportation.erb
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/base-min.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/forms-min.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 		<title>Transportation</title>
 	</head>
 	<body>
@@ -26,19 +27,26 @@
 	</div>
 		<h1>We are here to help you go from your origin to your destination</h1>
 
-		<div class="transportation" id="flights">
-				<h3> Main Airlines </h3>
-			<ul>
-      			<li><a href="http://www.americanairlines.com">American Airlines</a></li>
-      			<li><a href="http://www.deltaairlines.com">Delta Airlines</a></li>
-      			<li><a href="http://www.unitedairlines.com">United Airlines</a></li>
-      			<li><a href="http://www.southwest.com">Southwest Airlines</a></li>
-      			<li><a href="http://www.britishairways.com">British Airways</a></li>
-      			<li><a href="http://www.airfrance.us">Air France</a></li>
-      			<li><a href="http://www.emirates.com/us">Emirates</a></li>
-      			<li><a href="http://www.qantas.com/us">Qantas</a></li>
-      			<li><a href="http://www.lufthansa.com">Lufthansa</a></li>
-   			</ul>
+		<div class="transportation pure-g" id="flights">
+			<div class="pure-u-lg-2-3 pure-u-md-1-2 pure-u-sm-1-1"><h3>Main Airlines</h3>
+				<ul>
+	      			<div class="links"><li><a href="http://www.americanairlines.com">American Airlines</a></li></div>
+	      			<div class="links"><li><a href="http://www.deltaairlines.com">Delta Airlines</a></li></div>
+	      			<div class="links"><li><a href="http://www.unitedairlines.com">United Airlines</a></li></div>
+	      			<div class="links"><li><a href="http://www.britishairways.com">British Airways</a></li></div>
+	      			<div class="links"><li><a href="http://www.airfrance.us">Air France</a></li></div>
+	      			<div class="links"><li><a href="http://www.emirates.com/us">Emirates</a></li></div>
+	      			<div class="links"><li><a href="http://www.qantas.com/us">Qantas</a></li></div>
+	      			<div class="links"><li><a href="http://www.lufthansa.com">Lufthansa</a></li></div>
+	   			</ul>
+			</div><div class="pure-u-lg-1-3 pure-u-md-1-2 pure-u-1-1">
+	   			<h3>Budget Airlines</h3>
+	   			<ul>
+	      			<div class="links" id="swa"><li><a href="http://www.southwest.com">Southwest Airlines</a></li></div>
+	      			<div class="links"><li><a href="http://www.ryanair.com">Ryanair</a></li></div>
+	      			<div class="links"><li><a href="http://www.easyjet.com">Easy Jet</a></li></div>
+	   			</ul>
+			</div>
 		</div>
 
 		<div class="transportation" id="train">
