--- a/views/lodging.erb
+++ b/views/lodging.erb
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/base-min.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/forms-min.css">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
-		
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 		<title>Lodging</title>
 	</head>
 	<body>
