--- a/views/transportation.erb
+++ b/views/transportation.erb
@@ -28,23 +28,24 @@
 		<h1>We are here to help you go from your origin to your destination</h1>
 
 		<div class="transportation pure-g" id="flights">
-			<div class="pure-u-lg-2-3 pure-u-md-1-2 pure-u-sm-1-1"><h3>Main Airlines</h3>
+			<div class="pure-u-lg-2-3 pure-u-md-1-2 pure-u-sm-1-1">
+				<h3>Main Airlines</h3>
 				<ul>
-	      			<div class="links"><li><a href="http://www.americanairlines.com">American Airlines</a></li></div>
-	      			<div class="links"><li><a href="http://www.deltaairlines.com">Delta Airlines</a></li></div>
-	      			<div class="links"><li><a href="http://www.unitedairlines.com">United Airlines</a></li></div>
-	      			<div class="links"><li><a href="http://www.britishairways.com">British Airways</a></li></div>
-	      			<div class="links"><li><a href="http://www.airfrance.us">Air France</a></li></div>
-	      			<div class="links"><li><a href="http://www.emirates.com/us">Emirates</a></li></div>
-	      			<div class="links"><li><a href="http://www.qantas.com/us">Qantas</a></li></div>
-	      			<div class="links"><li><a href="http://www.lufthansa.com">Lufthansa</a></li></div>
+	      			<div class="links" id="american"><li><a href="http://www.americanairlines.com">American Airlines</a></li></div>
+	      			<div class="links" id="delta"><li><a href="http://www.deltaairlines.com">Delta Airlines</a></li></div>
+	      			<div class="links" id="united"><li><a href="http://www.unitedairlines.com">United Airlines</a></li></div>
+	      			<div class="links" id="british"><li><a href="http://www.britishairways.com">British Airways</a></li></div>
+	      			<div class="links" id="airfrance"><li><a href="http://www.airfrance.us">Air France</a></li></div>
+	      			<div class="links" id="emirates"><li><a href="http://www.emirates.com/us">Emirates</a></li></div>
+	      			<div class="links" id="qantas"><li><a href="http://www.qantas.com/us">Qantas</a></li></div>
+	      			<div class="links" id="lufthansa"><li><a href="http://www.lufthansa.com">Lufthansa</a></li></div>
 	   			</ul>
 			</div><div class="pure-u-lg-1-3 pure-u-md-1-2 pure-u-1-1">
 	   			<h3>Budget Airlines</h3>
 	   			<ul>
 	      			<div class="links" id="swa"><li><a href="http://www.southwest.com">Southwest Airlines</a></li></div>
-	      			<div class="links"><li><a href="http://www.ryanair.com">Ryanair</a></li></div>
-	      			<div class="links"><li><a href="http://www.easyjet.com">Easy Jet</a></li></div>
+	      			<div class="links" id="ryan"><li><a href="http://www.ryanair.com">Ryanair</a></li></div>
+	      			<div class="links" id="easy"><li><a href="http://www.easyjet.com">Easy Jet</a></li></div>
 	   			</ul>
 			</div>
 		</div>
